# lumi

./: Cargo.toml  README.md  todo.md
examples/: 1.lumi  2.lumi  3.lumi  4.lumi  5.lumi  bench1.lumi  builtin_fn1.lumi  builtin_fn2.lumi  builtin_fn5.lumi  builtint_fn3.lumi  builtint_fn4.lumi  custom_keyword1.lumi  fib.lumi  fixme.lumi  fn.lumi  fn2.lumi  for1.lumi  for3.lumi  index.lumi  ints1.lumi  ints2.lumi  namespace1.lumi  namespace3.lumi  namespace4.lumi  return.lumi  return1.lumi  return2.lumi  struct1.lumi  struct2.lumi  struct3.lumi  test.lumi  vars2.lumi  vectors.1.lumi
examples/aoc/: 2015_1.lumi
examples/tests/: 2.lumi  fib.lumi
runnables/: test.lumi
runnables/aoc/: 2015_2.lumi
src/: core.rs  debug.rs  dictionary.rs  env.rs  eval.rs  execute.rs  fileio.rs  helper.rs  interpreter.rs  lexer.rs  lib.rs  lnum.rs  main.rs  namespace.rs  parser.rs  stdlib.rs  str.rs  vectors.rs
syntax/: CHANGELOG.md  README.md  backup.json  package.json  vsc-extension-quickstart.md
syntax/syntaxes/: lumi.tmLanguage.json
test_examples/: bench1.lumi  builtin_fn1.lumi  builtin_fn5.lumi  dictionary1.lumi  dictionary2.lumi  fn3.lumi  for2.lumi  for4.lumi  foreach1.lumi  ints3.lumi  namespace2.lumi  namespace4.lumi  namespace5.lumi  return2.lumi  struct2.lumi  struct4.lumi  vars1.lumi  vars3.lumi  vars5.lumi  vectors2.lumi  vectors3.lumi
test_files/: 1.txt
tests/: test.rs
