[package]
name = "lumi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]
name = "lumi_lib"

[dependencies]
chrono = "0.4"
wasm-bindgen = "0.2"
lazy_static = "1.4.0"
num-traits = "0.2"
